# mrs_pi_arduino

./: LICENSE  README.md
Arduino_master/I2C_arduino_serial_Master/: I2C_arduino_serial_Master.ino
Arduino_slave/slave_receiver_I2c/: slave_receiver_I2c.ino
mrs_motors/: CMakeLists.txt  package.xml  setup.py
mrs_motors/launch/: i2c_motor.launch
mrs_motors/scripts/: i2c_Motor.py
